# voting-from-lattices

./: README.md
cumulative_voting/: CMakeCompilers.txt  CMakeLists.txt  Makefile  README.md  main.cpp
cumulative_voting/include/: BDLOP.hpp  BGV.hpp  params.hpp  util.hpp  vericrypt.hpp
cumulative_voting/lib/: fips202.h
cumulative_voting/src/: vericrypt.cpp
cumulative_voting/tests/: .cproject  Makefile  Test_poly_encrypt.cpp  Test_simple.cpp
smile/: Makefile  README.md  bgv.c  bgv.h  comm.c  gaussian.h  gaussian_ct.cpp  mxproof.c  params.h  poly.c  poly.h  polyvec.c  polyvec.h  rej.c  rej.h  smile.c  smile.h  test_bgv.c  test_shuffle.c  test_smile.c  util.c  util.h
verifiable-decryption-BGV/: README.md  encryption.cpp  makefile  parameters.h  params.py
